# extsort-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  mlc_config.json
.github/: dependabot.yml
.github/workflows/: push-tester.yml
benches/: huge.rs  sort.rs
src/: iter.rs  lib.rs  push.rs  sorter.rs
tests/: markdown.rs
