[package]
name = "extsort"
description = "External sorting (i.e. on disk sorting) capability on arbitrarily sized iterator"
version = "0.4.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["sorting", "sort", "external"]
repository = "https://github.com/appaquet/extsort-rs"
edition = "2018"

[dependencies]
tempfile = "3.1"
rayon = "1.5"

[dev-dependencies]
byteorder = "1.3"
skeptic = "0.13"
rand = "0.8"

[build-dependencies]
skeptic = "0.13"
