[package]
name = "extsort"
description = "External sorting (i.e. on disk sorting) capability on arbitrarily sized iterator"
version = "0.5.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["sorting", "sort", "external"]
repository = "https://github.com/appaquet/extsort-rs"
edition = "2021"

[dependencies]
tempfile = "3.10"
rayon = "1.8"

[dev-dependencies]
byteorder = "1.5"
skeptic = "0.13"
rand = "0.8"
criterion = "0.5"

[build-dependencies]
skeptic = "0.13"

[[bench]]
harness = false
name = "sort"

[profile.bench]
debug = true
opt-level = 1